crates/rome_cli/tests/snapshots/main_commands_check/fs_error_dereferenced_symlink_windows.snap
---
source: crates/rome_cli/tests/snap_test.rs
assertion_line: 223
expression: content
---
# Emitted Messages

```block
C:\Users\User\AppData\Local\Temp\rome_test_broken_symlink\broken_symlink internalError/fs ━━━━━━━━━━

  ! Dereferenced symlink
  
  i Rome encountered a file system entry that is a broken symbolic link: C:\Users\User\AppData\Local\Temp\rome_test_broken_symlink\broken_symlink
  

```


