crates/rome_cli/tests/snapshots/main_commands_check/fs_error_infinite_symlink_exapansion_unix.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
# Termination Message

```block
no files were processed in the specified paths.
```

# Emitted Messages

```block
/tmp/rome_test_infinite_symlink_exapansion/prefix internalError/fs ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! Infinite symlink expansion
  
  × Rome encountered a file system entry that leads to an infinite symbolic link expansion, causing an infinite cycle: /tmp/rome_test_infinite_symlink_exapansion/prefix
  

```

```block
/tmp/rome_test_infinite_symlink_exapansion/prefix internalError/fs ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! Infinite symlink expansion
  
  × Rome encountered a file system entry that leads to an infinite symbolic link expansion, causing an infinite cycle: /tmp/rome_test_infinite_symlink_exapansion/prefix
  

```


