crates/rome_cli/tests/snapshots/main_commands_check/fs_error_infinite_symlink_exapansion_windows.snap
---
source: crates/rome_cli/tests/snap_test.rs
assertion_line: 223
expression: content
---
# Emitted Messages

```block
C:\Users\User\AppData\Local\Temp\rome_test_infinite_symlink_exapansion\prefix internalError/fs ━━━━━━━━━━

  ! Infinite symlink expansion
  
  × Rome encountered a file system entry that leads to an infinite symbolic link expansion, causing an infinite cycle: C:\Users\User\AppData\Local\Temp\rome_test_infinite_symlink_exapansion\prefix
  

```

```block
C:\Users\User\AppData\Local\Temp\rome_test_infinite_symlink_exapansion\prefix internalError/fs ━━━━━━━━━━

  ! Infinite symlink expansion
  
  × Rome encountered a file system entry that leads to an infinite symbolic link expansion, causing an infinite cycle: C:\Users\User\AppData\Local\Temp\rome_test_infinite_symlink_exapansion\prefix
  

```


