crates/rome_cli/tests/snapshots/main_commands_check/fs_error_infinite_symlink_expansion_to_files.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
# Termination Message

```block
internalError/io ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  


```

# Emitted Messages

```block
<TEMP_DIR>/check_rome_test_infinite_symlink_expansion_to_files/foo/bar/symlink2 internalError/fs ━━━━━━━━━━━━━━━━━━━━

  ! Deeply nested symlink expansion
  
  × Rome encountered a file system entry with too many nested symbolic links, possibly forming an infinite cycle: <TEMP_DIR>/check_rome_test_infinite_symlink_expansion_to_files/foo/bar/symlink2
  

```

```block
<TEMP_DIR>/check_rome_test_infinite_symlink_expansion_to_files/prefix/symlink1 internalError/fs ━━━━━━━━━━━━━━━━━━━━

  ! Deeply nested symlink expansion
  
  × Rome encountered a file system entry with too many nested symbolic links, possibly forming an infinite cycle: <TEMP_DIR>/check_rome_test_infinite_symlink_expansion_to_files/prefix/symlink1
  

```

```block
Checked 0 file(s) in <TIME>
```


