crates/rome_cli/tests/snapshots/main_commands_check/fs_error_infinite_symlink_expansion_windows.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
# Termination Message

```block
no files were processed in the specified paths.
```

# Emitted Messages

```block
<TEMP_DIR>/rome_test_infinite_symlink_expansion/prefix internalError/fs ━━━━━━━━━━

  ! Infinite symlink expansion
  
  × Rome encountered a file system entry that leads to an infinite symbolic link expansion, causing an infinite cycle: <TEMP_DIR>/rome_test_infinite_symlink_expansion/prefix
  

```

```block
<TEMP_DIR>/rome_test_infinite_symlink_expansion/prefix internalError/fs ━━━━━━━━━━

  ! Infinite symlink expansion
  
  × Rome encountered a file system entry that leads to an infinite symbolic link expansion, causing an infinite cycle: <TEMP_DIR>/rome_test_infinite_symlink_expansion/prefix
  

```

```block
Checked 0 file(s) in <TIME>
```


