crates/rome_cli/tests/snapshots/main_commands_check/fs_error_symlink.snap
---
source: crates/rome_cli/tests/snap_test.rs
expression: content
---
# Termination Message

```block
no files were processed in the specified paths.
```

# Emitted Messages

```block
prefix/ci.js internalError/fs ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! Symbolic links are not supported
  
  i Rome does not currently support visiting the content of symbolic links since it could lead to an infinite traversal loop
  

```


